Fix "<object> tags don't work if modules are disabled"

They should keep working for text/html, at least.
BUG: 298318